--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,3 @@
-# netlify.toml
-
 [build]
-  command = ""                  # ← empty if no frontend build step
-  publish = "."                 # ← current folder (for single-file HTML)
-  functions = "netlify/functions"   # ← where functions are stored
+  publish = "."
+  functions = "netlify/functions"
